--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -1,75 +1,88 @@
-$primary-color:#fe538d;
-$secondry-color:#dbd03c;
-$text-color:#000;
-$text-white:rgb(255, 255, 255);
+$primary-color: #fe538d;
+$secondry-color: #dbd03c;
+$text-color: #000;
+$text-white: rgb(255, 255, 255);
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
- 
-body{
-      font-family: "Rubik", sans-serif;
+
+body {
+    font-family: "Rubik", sans-serif;
 
 }
-h1{
+
+h1 {
     font-size: 4.5em;
 }
-h2{
+
+h2 {
     font-size: 3em;
 }
-h3{
+
+h3 {
     font-size: 2em;
 }
-p{
+
+p {
     font-size: 1.2em;
 }
-header{
-    nav{
-        .nav-link{
+
+header {
+    nav {
+        .nav-link {
             text-transform: uppercase;
             color: $text-color;
             font-weight: 500;
             margin-left: 20px;
             font-size: 1em;
         }
-        .logo{
+
+        .logo {
             text-transform: uppercase;
             font-size: 1em;
             font-weight: 500;
-            span{
+
+            span {
                 color: #12b581;
             }
         }
     }
 }
-.section-1{
-    .hero{
-background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0)), url('../images/hero.jpg');
+
+.section-1 {
+    .hero {
+        background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url('../images/hero.jpg');
         min-height: 600px;
         color: $text-white;
-        span{
+
+        span {
             color: $secondry-color;
             font-size: 1.5em;
             font-weight: 500;
         }
-        .btn-primary{
+
+        .btn-primary {
             background-color: $primary-color;
             border: 1px solid $primary-color;
             padding: 10px 15px;
             font-size: 1em;
             font-weight: 500;
             text-transform: uppercase;
-            &:hover{
+
+            &:hover {
                 background-color: $secondry-color;
                 border: 1px solid $secondry-color;
             }
         }
-         .btn-secondary{
+
+        .btn-secondary {
             background-color: $secondry-color;
             border: 1px solid $secondry-color;
             padding: 10px 15px;
             font-size: 1em;
             font-weight: 500;
             text-transform: uppercase;
-            &:hover{
+
+            &:hover {
                 background-color: $primary-color;
                 border: 1px solid $primary-color;
             }
